added figures and text

--- a/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.tex
+++ b/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.tex
@@ -21,6 +21,12 @@
 	
 	The polymer will evolve into a new steady spatial configuration which represents the chromatin 15 minutes post UV-C. At which point, the region of interest (ROI) is defined as the circle containing 90\% of the damaged monomers and centered at their CM. The ROI remains a fixed region used to track the number of damaged and undamaged monomers within it. Measurements are done off-line, such that the ROI's position is retrospectively updated to be centered at the CM of the monomers tagged damaged.
 	
+\begin{figure}
+
+\includegraphics[width=0.9\linewidth, height=0.35\textheight]{threeStagesOfSimulation}
+\caption{}
+\label{fig:threeStagesOfSimulation}
+\end{figure}
 	\subsection{Post repair stage}
 	% cross-linking back to the initial level. this sectio is not yet simulated. 
 	
