changes params, ran simulations, fixed reformConnection functions in the simulation framework, to allow maximal number of connection correct operation

--- a/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.bib
+++ b/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.bib
@@ -5,3 +5,23 @@
   year={1988},
   publisher={oxford university press}
 }
+
+@article{gaillard2003chromatin,
+	title={Chromatin remodeling activities act on UV-damaged nucleosomes and modulate DNA damage accessibility to photolyase},
+	author={Gaillard, H{\'e}l{\`e}ne and Fitzgerald, Daniel J and Smith, Corey L and Peterson, Craig L and Richmond, Timothy J and Thoma, Fritz},
+	journal={Journal of Biological Chemistry},
+	volume={278},
+	number={20},
+	pages={17655--17663},
+	year={2003},
+	publisher={ASBMB}
+}
+
+@article{adam2015imaging,
+	title={Imaging Local Deposition of Newly Synthesized Histones in UVC-Damaged Chromatin},
+	author={Adam, Salom{\'e} and Dabin, Juliette and Bai, Siau-Kun and Polo, Sophie E},
+	journal={Chromatin Protocols},
+	pages={337--347},
+	year={2015},
+	publisher={Springer}
+}
