added the possibility to repair monomers according to Poissonian probability functio. The damage effect was tested and corrected to enable damage in a small concentrated region

--- a/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.tex
+++ b/Documents/Report/SimulationFramework/SimulationFrameworkForChromatineArchitecturePostUVC.tex
@@ -33,6 +33,7 @@
 	\begin{equation}
 	U_L=\frac{3k_BT}{2b^2}\sum_{n=1}^N (||R_{n}-R_{n+1}||^2-L)^2
 	\end{equation}
+    with $b>L$ the std of spring length. 
     	
 	The measure of cross-linking is given by the percentage $0\leq \alpha\leq 100$ of non-NN monomers connected out of the total. For each realization of the polymer, cross-links are added between pairs of monomers chosen uniformly at random. The dynamics of the cross-linked polymer is then simulated up to its relaxation time, determined by be the slowest mode of the linear chain \cite{doi1988theory}.
 
