rearrangment of the folder into chapters of the article. several bug fixing in the simulation framework like randomizing the connection with each simulation

--- a/Documents/Report/SimulationFramework/MaterialAndMethods/SimulationFrameworkForChromatineArchitecturePostUVC.tex
+++ b/Documents/Report/SimulationFramework/MaterialAndMethods/SimulationFrameworkForChromatineArchitecturePostUVC.tex
@@ -5,7 +5,7 @@
 \usepackage{color}
 \usepackage{float}
 \begin{document}	
-	\title{Simulation framework for chromatin architecture post UV-C irradiation}
+	\title{Simulation framework for chromatin architecture post UVC irradiation}
 \maketitle
 \section{The simulation framework}
 	We follow \textit{in silico} the dynamics of DNA and nucleosome signal loss from a circular region of interest (ROI) up to 15 minutes post UV-C irradiation followed by a period post repair. To examine the re-organization of the chromatin post UV-C, we compare between the polymer configuration before UV-C and at the end of repair stage. Simulations are performed for a range of UV-C dosage $u$.  
