some parameters changed. edited introduction and M&M

--- a/Documents/Report/SimulationFramework/Introduction/Introduction.tex
+++ b/Documents/Report/SimulationFramework/Introduction/Introduction.tex
@@ -8,7 +8,7 @@
 	\title{Introduction}
 	\maketitle
 	% Gene expression in healthy chromatin is regulated on both the genomic and epigenomic level.
-	 Expression of genes in healthy nucleus is regulated by both genetic and epigenetic  factors. It has been widely demonstrated that the chromatin organization plays a pivotal role in such regulation. Close spatial proximity between regulatory elements needs to be maintained for the correct function and regulation of a gene.  
+	 Gene expression is regulated by both genetic and epigenetic activity [ref]. It has been widely demonstrated that the chromatin organization plays a pivotal role in such regulation [REF]. Close spatial proximity between regulatory elements needs to be maintained for the correct function and regulation of a gene.  
 	% Both genomic and epigenomic functions are disrupted after DNA damage and during their repair process.
 	 Following damages to the genetic content, the cell undertakes repair through several pathways. The involvement of repair factors at the site of damage disrupts the local structure of the DNA and histones attached. Therefore altering the spatial organization needed for maintaining correct function. In UV induced damages, DNA lesions are formed which require the exposing of the damaged site by removing or sliding of histones to facilitate efficient repair. 
 	 
@@ -17,7 +17,7 @@
 	% previous work
 	
 	% We view the rearangment of epigenomic contant post UVC caused by chromatin decompaction and histone sliding. 
-	We propose here that histones evicted from sites of damages are not lost following UV damage but slide along the chromatin chain. Therefore, deposition of newly synthesized histones then does not follow in massive scale and a mechanism for copying the damaged epigenetic template is not needed. The chromatin structure is refolded to a stucture similar to the one before UVC in terms of spatial proximity of different parts of the chromatin. Over time, with regular activity of the cell, like transcription factors accessing the genetic content for regulation, the chromatin refoms its original shape.  
+	We propose here that histones evicted from sites of damages are not lost following UV damage but slide along the chromatin chain. Therefore, deposition of newly synthesized histones does not follow in massive scale and a mechanism for copying the damaged epigenetic template is not needed. The chromatin structure is refolded to a stucture similar to the one before UVC in terms of spatial proximity of different parts of the chromatin. Over time, with regular activity of the cell, like transcription factors accessing the genetic content for regulation, the chromatin refoms its original shape.  
 	% We model histone and DNA signal loss post UVC for various UV dosage and show the relative contribution of each process to signal loss.
 	To demonstrate these principal we have modeled histone eviction following UVC irradiation by a simple mathematical model, taking into account only the most trivial relationships between variables.
 		
