--- a/Documents/Report/SimulationFramework/MaterialAndMethods/SimulationFrameworkForChromatineArchitecturePostUVC.tex
+++ b/Documents/Report/SimulationFramework/MaterialAndMethods/SimulationFrameworkForChromatineArchitecturePostUVC.tex
@@ -10,7 +10,7 @@
 \section{The simulation framework}
 	We follow \textit{in silico} the dynamics of DNA and nucleosome signal loss from a circular region of interest (ROI) up to 15 minutes post UV-C irradiation followed by a period post repair. To examine the re-organization of the chromatin post UV-C, we compare between the polymer configuration before UV-C and at the end of repair stage. Simulations are performed for a range of UV-C dosage $u$.  
 	
-	To representing the dynamics of the chromatin in the UV damage micro-environment, simulations are performed in a three-dimensional spherical domain with reflecting boundaries. Results are reported as the projected values on the x-y plane, in-line with the maximal Z-projection reported experimentally \cite{adam2015imaging}. 
+	To representing the dynamics of the chromatin in the UV damage micro-environment, simulations are performed in a three-dimensional spherical domain with reflecting boundaries. Results are reported as the projected values on the x-y plane, in-line with the experimental procedure \cite{adam2015imaging}. 
 	
 	\subsection{The polymer model}
 	We use a cross-linked Rouse chain of $N$ monomers connected by harmonic springs \cite{doi1988theory} to represent a coarse-grained model of the chromatin. Springs connecting adjacent monomers in the linear chain are allowed to contract to a minimal length $L_0>0$. Cross-links are represented by harmonic springs connecting a subset of $M\leq N$ non nearest-neighbor (NN), who allowed to contract to a minimal length $L_C>0$. 
