added an article folder. moved the simulation framework and the mathematical model version 07 to there.

--- a/Documents/Article/ModelForHistoneSlidingChromatinStructurePostUVC.bib
+++ b/Documents/Article/ModelForHistoneSlidingChromatinStructurePostUVC.bib
@@ -50,3 +50,13 @@
 	year={2012},
 	publisher={Springer}
 }
+
+@book{doi1988theory,
+  title={The theory of polymer dynamics},
+  author={Doi, Masao and Edwards, Sam F},
+  volume={73},
+  year={1988},
+  publisher={oxford university press}
+}
+
+
