editing the article

--- a/Documents/Article/ModelForHistoneSlidingChromatinStructurePostUVC.bib
+++ b/Documents/Article/ModelForHistoneSlidingChromatinStructurePostUVC.bib
@@ -59,4 +59,25 @@
   publisher={oxford university press}
 }
 
+@article{smerdon1991dna,
+  title={DNA repair and the role of chromatin structure},
+  author={Smerdon, Michael J},
+  journal={Current opinion in cell biology},
+  volume={3},
+  number={3},
+  pages={422--428},
+  year={1991},
+  publisher={Elsevier}
+}
+
+@article{green2002repair,
+  title={When repair meets chromatin},
+  author={Green, Catherine M and Almouzni, Genevi{\`e}ve},
+  journal={EMBO reports},
+  volume={3},
+  number={1},
+  pages={28--33},
+  year={2002},
+  publisher={EMBO Press}
+}
 
